Fri Jul  1 15:21:14 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Allow non integer exponents for Matrix#**

Fri Jul  1 15:13:25 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix: Add Eigenvalue Decomposition

Fri Jul  1 15:10:22 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix: Add Matrix#round

Fri Jul  1 11:41:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_trans): free heap ptr when the str is not embeded.
	  patched by Eric Wong. [Bug #4956] [ruby-core:37708]

Fri Jul  1 11:07:43 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (do_select): fix memory leak.
	Patch by Eric Wong. Thank you! [Bug #4953] [ruby-core:37702]

Fri Jul  1 08:21:28 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_getivar): check vm state version
	  to invalidate inline chache (ivar index).
	  fixes Bug #4926.

	* vm_insnhelper.c (vm_setivar): ditto.

Fri Jul  1 08:03:15 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c, thread_pthread.c (WRITE_CONST): suppress warnings
	  `ignoring return value'.

Fri Jul  1 06:41:36 2011  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_threadptr_check_signal): only wake up main thread.

	* thread.c (rb_threadptr_execute_interrupts_common): check signal
	  deliverly if it is main thread.
	  fixes [ruby-dev:44005] [Ruby 1.9 - Bug #4950]

	* bootstraptest/test_fork.rb: add a test for above.

	* signal.c (rb_get_next_signal): skip if signal_buff is empty.
	  (check signal_buff.size first)

	* vm_core.h: remove unused variable rb_thread_t::exec_signal.

	* thread.c (rb_thread_check_trap_pending): check
	  rb_signal_buff_size() because rb_thread_t::exec_signal
	  is no longer available.

Fri Jul  1 03:28:25 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (Init_class_hierarchy): should name BasicObject
	  explicitly.

	* variable.c (rb_const_defined_0): should not check for
	  superclasses as const_get.
